## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = \
        libgmtk.la


libgmtk_la_SOURCES = \
	gmtk.h \
    	gmtk_audio_meter.h \
    	gmtk_audio_meter.c \
    	gmtk_media_tracker.h \
    	gmtk_media_tracker.c

libgmtk_la_CFLAGS = \
	$(GTK_CFLAGS)

libgmtk_la_LDFLAGS = \
	$(GTK_LDFLAGS)

